--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rr2"]
+	path = rr2
+	url = https://github.com/arives/rr2
+	shallow = true
+	registered = true
